# scancontext

./: .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
cpp/: CMakeLists.txt  KDTreeVectorOfVectorsAdaptor.h  ScanContext.cpp  ScanContext.hpp
cpp/module/Scancontext/: CMakeLists.txt  Scancontext.cpp  Scancontext.h
cpp/pybind/: CMakeLists.txt  scan_context.py  scan_context_pybind.cpp  stl_vector_eigen.h
pybind/: scan_context.py  scan_context_pybind.cpp
pybind/pybind11/: pybind11.cmake
python/: Distance_SC.py  make_sc_example.py  pipeline.py
python/datasets/: __init__.py  apollo.py  kitti.py  mulran.py  ncd.py  nclt.py
python/tools/: cmd.py  pipeline_results.py  visualization.py
scan_context/: CMakeLists.txt  ScanContext.cpp  ScanContext.hpp  nanoflann.hpp  pipeline.py
scan_context/datasets/: __init__.py  apollo.py  digiforest.py  kitti.py
scan_context/tools/: cmd.py  parse_g2o.py  pipeline_results.py
